# microstock_file_manager

./: .gitignore  README.md
docs/: keywords.md  prompts.md
ingram/: ingram.sh  pyproject.toml
ingram/data/: keywords_example.json
ingram/src/ingram/: cli.py  config.py  image_processor.py  keywords.py  utils.py
